<resources>
    <string name="app_name">ECommerce</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="heart">Heart</string>
    <string name="user">User</string>
    <string name="what_do_you_search_for">What do you search for?</string>
    <string name="categories_text">Categories</string>
    <string name="view_all">view all</string>
    <string name="men_fashion">Men\'s</string>
    <string name="women_s_fashion">Women\'s Fashion</string>
    <string name="clothes">Clothes</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_no">Enter your mobile no.</string>
    <string name="email">E-mail</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back_to_route">Welcome Back To Route!</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an account? Create Account</string>
    <string name="login">Login</string>
    <string name="please_sign_in_with_your_mail">Please sign in with your mail</string>
    <string name="guess_women_s">GUESS Women\'s</string>
    <string name="gold_watch">Gold Watch</string>
    <string name="egp_1_200">EGP 1.200</string>
    <string name="egp_1_500">EGP 1.500</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="welcome_mohammad">Welcome, Mohammad</string>
    <string name="men_s_fashion">Men\'s Fashion</string>
    <string name="suits">Suits</string>
    <string name="products_details">Products Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="review">Review</string>
    <string name="color">Color</string>
    <string name="total_price">Total price</string>
    <string name="cart">Cart</string>
    <string name="check_out">Check Out</string>
    <string name="product_size">Size: </string>
    <string name="egp">EGP</string>
    <string name="banner">banner</string>
    <string name="electronics">Electronics</string>
    <string name="mens_fashion">Men\'s Fashion</string>
    <string name="shop_now">Shop Now</string>
</resources>