<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        style="@style/wish_list_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:src="@drawable/product_wish_list" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/guess_women_s"
                android:textAlignment="center"
                android:textColor="@color/product_name_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/icon_wish_list"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="200dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="-8dp"
                    android:src="@drawable/ic_wish_listed" />

            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/icon_product_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/icon_product_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/product_color"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/gold_watch"
                android:textAlignment="center"
                android:textColor="#06004F"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_product_color"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="serif"
                android:text="@string/egp_1_200"
                android:textAlignment="center"
                android:textColor="#06004F"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/icon_product_color" />

            <TextView
                android:id="@+id/product_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="serif"
                android:text="@string/egp_1_500"
                android:textAlignment="center"
                android:textColor="#9906004F"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/product_price"
                app:layout_constraintTop_toBottomOf="@id/product_color" />

            <View
                android:layout_width="0dp"
                android:layout_height=".7dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="@id/product_discount_price"
                app:layout_constraintEnd_toEndOf="@id/product_discount_price"
                app:layout_constraintStart_toStartOf="@id/product_discount_price"
                app:layout_constraintTop_toTopOf="@id/product_discount_price" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"

                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="@id/icon_wish_list"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>